primeras adecuaciones y login corregido en la db

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,7 @@
         "Rojo",
         "satisfactoriamente",
         "Solicitar",
-        "Tangata",
-        "tangatasession"
+        "Reinga",
+        "reingasession"
     ]
 }
