listado de equipos funcionando

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,26 +1,66 @@
 {
     "cSpell.words": [
+        "Activos",
+        "actualizado",
         "Agregar",
+        "almacenamiento",
         "APELLIDOS",
         "aqui",
+        "Aquí",
+        "asignados",
         "Azul",
+        "Bienvenido",
         "Cambios",
+        "capacidad",
+        "categoria",
         "ccosto",
+        "computo",
+        "corporativos",
+        "Crear",
+        "Diademas",
         "Documento",
+        "eliminado",
         "Empleados",
+        "empresa",
+        "equipo",
+        "equipos",
+        "Equipos",
+        "fabricante",
+        "fullname",
+        "Gestion",
+        "gestión",
+        "Gestionar",
         "guardado",
         "Identidad",
         "lideres",
         "Listado",
         "Listar",
         "listas",
+        "modelo",
+        "Morral",
+        "nombre",
         "NOMBRES",
+        "operativo",
+        "otros",
+        "Otros",
+        "perifericos",
+        "Perifericos",
+        "periféricos",
+        "procesador",
         "procesos",
+        "puedes",
+        "Registro",
+        "Reinga",
+        "reingasession",
         "resave",
         "Rojo",
         "satisfactoriamente",
         "Solicitar",
-        "Reinga",
-        "reingasession"
+        "Teclado",
+        "tiene",
+        "timeago",
+        "tipo",
+        "usuarios",
+        "Usuarios"
     ]
 }
