creado el boton de agregar nuevo registro y las correspondientes pruebas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,20 @@
 {
     "cSpell.words": [
+        "Aceptable",
         "Activos",
         "actualizado",
         "Agregar",
+        "Alamacenamiento",
         "almacenamiento",
         "APELLIDOS",
         "aqui",
         "Aquí",
         "asignados",
         "Azul",
+        "Baja",
         "Bienvenido",
         "Cambios",
+        "Cantidad",
         "capacidad",
         "categoria",
         "ccosto",
@@ -19,27 +23,35 @@
         "Crear",
         "Diademas",
         "Documento",
+        "Editar",
         "eliminado",
+        "Eliminar",
         "Empleados",
         "empresa",
         "equipo",
         "equipos",
         "Equipos",
+        "Estado",
+        "Excelente",
         "fabricante",
+        "fecha",
         "fullname",
         "Gestion",
         "gestión",
         "Gestionar",
         "guardado",
+        "Guardar",
         "Identidad",
         "lideres",
         "Listado",
         "Listar",
         "listas",
+        "mantenimiento",
         "modelo",
         "Morral",
         "nombre",
         "NOMBRES",
+        "Nuevo",
         "operativo",
         "otros",
         "Otros",
@@ -48,12 +60,17 @@
         "periféricos",
         "procesador",
         "procesos",
+        "propiedad",
+        "Propio",
         "puedes",
         "Registro",
         "Reinga",
         "reingasession",
+        "Reparar",
         "resave",
+        "Revisar",
         "Rojo",
+        "salud",
         "satisfactoriamente",
         "Solicitar",
         "Teclado",
