configurado y probada la funcion de eliminar registros

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,83 +1,428 @@
 {
     "cSpell.words": [
+        "Abastecimiento",
         "Aceptable",
+        "acta",
         "Activos",
         "actualizado",
+        "Administrativa",
+        "Adrían",
         "Agregar",
+        "Agudelo",
+        "Aguelo",
+        "Aicardo",
         "Alamacenamiento",
+        "Albeiro",
+        "Aldemar",
+        "Almacen",
         "almacenamiento",
+        "ALMACENGUARNE",
+        "Almacenista",
+        "Alonso",
+        "Alzate",
+        "Analista",
         "APELLIDOS",
         "aqui",
         "Aquí",
+        "Aramburo",
+        "Arango",
+        "Araque",
+        "Archivo",
+        "Aristizabal",
+        "Aristizabla",
         "asignados",
+        "Asistente",
+        "ASUS",
+        "Auxiliar",
+        "Auxliar",
         "Azul",
         "Baja",
+        "Barajas",
+        "BASCULA",
+        "BCQD",
+        "Bedoya",
+        "Benjumea",
+        "Bermudez",
+        "Betancur",
+        "BHNTVG",
+        "Bibiana",
+        "Bienestar",
         "Bienvenido",
+        "BKZVQ",
+        "Blandon",
+        "BQCR",
+        "buscaefz",
+        "Bustamante",
+        "BVQQ",
+        "Cadavid",
+        "calidad",
+        "Calidad",
+        "Calle",
         "Cambios",
+        "Camila",
+        "Camilo",
+        "Cano",
         "Cantidad",
         "capacidad",
+        "Carvajal",
+        "Castiblanco",
+        "Castrillon",
         "categoria",
+        "CBNYJZ",
         "ccosto",
+        "CCQJ",
+        "cedula",
+        "centro",
+        "Chica",
+        "Ciro",
+        "Clemente",
+        "CLRZYZ",
+        "CMRZYZ",
+        "Comercial",
+        "Comercio",
+        "Compras",
         "computo",
+        "Comunicaciones",
+        "Contabilidad",
+        "Contable",
+        "Coordinador",
+        "Coordinadora",
         "corporativos",
+        "Correa",
+        "Corte",
+        "Corzo",
+        "costo",
+        "Costos",
         "Crear",
+        "Cristian",
+        "CSCZ",
+        "CXBCQJ",
+        "Dahiana",
+        "Daniela",
+        "Dayro",
+        "Deiby",
+        "Deimer",
+        "Desarrollo",
+        "destrezas",
+        "DFFM",
+        "DFNTVG",
+        "DGNTVG",
+        "DHCKQT",
         "Diademas",
+        "Diaz",
+        "diceño",
+        "Directora",
+        "Diseño",
+        "Disrecoras",
+        "DKLSFX",
+        "DMWS",
+        "Doble",
         "Documento",
+        "Doria",
+        "Duvan",
+        "Echavarria",
+        "Echeverri",
         "Editar",
+        "Electr",
         "eliminado",
         "Eliminar",
+        "Elkin",
+        "EMPAQUE",
+        "empleado",
         "Empleados",
         "empresa",
+        "emsalbradora",
+        "ensamble",
+        "Entrada",
         "equipo",
         "equipos",
         "Equipos",
+        "Escarria",
+        "Escobar",
+        "escuela",
+        "Escuela",
         "Estado",
+        "Estupiñan",
         "Excelente",
         "fabricante",
+        "Facilitador",
+        "fcwb",
         "fecha",
+        "FFNTVG",
+        "Fideligno",
+        "Financiera",
+        "Financiero",
+        "FNJVT",
+        "Formador",
+        "FORMAPRESS",
+        "FQCZ",
+        "FQTBY",
+        "Fredy",
+        "FTZJLM",
         "fullname",
+        "FUXZ",
+        "FYGM",
+        "Galeano",
+        "Gallego",
+        "Gaona",
+        "García",
+        "Garro",
+        "GCQJ",
+        "Gerencia",
+        "Gerente",
         "Gestion",
         "gestión",
         "Gestionar",
+        "Giraldo",
+        "GLRZYZ",
+        "Goez",
+        "Grajales",
+        "Guanga",
         "guardado",
         "Guardar",
+        "gvwb",
+        "HDLYWT",
+        "Henao",
+        "herramientas",
+        "Hewiett",
+        "HKTCZ",
+        "hnbxjjhmj",
+        "HNTVG",
+        "HYBCQJ",
+        "Idárraga",
         "Identidad",
+        "Impuestos",
+        "Infraestructura",
+        "Ingenieria",
+        "Ingeniería",
+        "Ingeniero",
+        "Inspiron",
+        "Inventarios",
+        "Investigación",
+        "Isaza",
+        "Jahir",
+        "Jairo",
+        "Jaramillo",
+        "Jeniffer",
+        "Jhon",
+        "Jhonattan",
+        "Jhonny",
+        "Jhovany",
+        "JNTVG",
+        "Johan",
+        "Johana",
+        "JPFMKH",
+        "JRGM",
+        "KVQQ",
+        "KZVQ",
+        "Latutude",
+        "LDYWT",
+        "Lider",
+        "Líder",
         "lideres",
+        "LIDERSOFASA",
         "Listado",
         "Listar",
         "listas",
+        "Lizeth",
+        "LLSEC",
+        "Loaiza",
+        "Logistica",
+        "Logística",
+        "Logistico",
+        "Logístico",
+        "Londoño",
+        "Lopera",
+        "LPMHL",
+        "LPMMH",
+        "LPRNV",
+        "LPZL",
+        "LPZN",
+        "LSOFASA",
+        "LWSW",
         "mantenimiento",
+        "Manufactura",
+        "Manufatura",
+        "maquinas",
+        "Marianella",
+        "Marín",
+        "Mateo",
+        "Mecánica",
+        "Menco",
+        "Meneses",
+        "Metalmecanica",
+        "METROLOGIA",
+        "MJMWNXL",
+        "MJWGCZK",
+        "MJXKMXB",
+        "MJXLH",
         "modelo",
+        "Moncada",
+        "Monsalve",
         "Morral",
+        "Motocicletas",
+        "motos",
+        "Motos",
+        "movimiento",
+        "MRGDW",
+        "MRZYZ",
+        "MTALLERMTO",
+        "Muñoz",
+        "MWJZ",
+        "Narvaez",
+        "newreg",
         "nombre",
         "NOMBRES",
+        "Nómina",
+        "Noreña",
+        "Norvey",
+        "Noteña",
         "Nuevo",
+        "NUMA",
+        "Ocampo",
+        "Operación",
+        "Operaciones",
+        "Operario",
         "operativo",
+        "Optiplex",
+        "Osorio",
+        "Osorno",
+        "Ospina",
+        "Oswaldo",
+        "Otalvaro",
         "otros",
         "Otros",
+        "Palacio",
+        "Paola",
+        "Paredes",
+        "PCGR",
+        "PEGL",
+        "Penagos",
+        "Perea",
         "perifericos",
         "Perifericos",
         "periféricos",
+        "PFOK",
+        "Pineda",
+        "Pino",
+        "Pintura",
+        "Poliuretano",
+        "PORTERIA",
+        "Practicante",
+        "Presidencia",
+        "Presidente",
+        "PRESTAMOS",
+        "PREXA",
+        "Prexxa",
         "procesador",
+        "proceso",
         "procesos",
+        "produccion",
+        "Produccion",
+        "producción",
+        "productividad",
+        "Productividad",
         "propiedad",
         "Propio",
+        "Provisionamiento",
+        "Proyectos",
         "puedes",
+        "Pulgarin",
+        "Pulgarín",
+        "Qbex",
+        "QRZYZ",
+        "Quientero",
         "Registro",
         "Reinga",
         "reingasession",
+        "Rengifo",
         "Reparar",
+        "Reposición",
         "resave",
+        "Restrepo",
         "Revisar",
+        "Revisoria",
         "Rojo",
+        "Ryzen",
+        "Saldarriaga",
         "salud",
         "satisfactoriamente",
+        "SCGS",
+        "SDESPACHOS",
+        "seki",
+        "Selección",
+        "SELLADO",
+        "Serna",
+        "Sibaja",
+        "Siegert",
+        "Sistemas",
+        "SJBK",
+        "SMOTOS",
+        "SNJQE",
+        "Sofasa",
+        "Soldadura",
         "Solicitar",
+        "Soluciones",
+        "Soporte",
+        "Sossa",
+        "STALLER",
+        "STALLERING",
+        "Stefany",
+        "Stiven",
+        "STUBERIA",
+        "Subensamble",
+        "SUPERSEKI",
+        "Supervisior",
+        "Suta",
+        "TALLERDPS",
+        "TALLERHERI",
+        "Tamayo",
+        "TCEN",
+        "TCEP",
+        "TCET",
+        "TCEU",
+        "TDPS",
         "Teclado",
+        "Técnico",
+        "Tecnología",
+        "Tejada",
+        "Thinkcentre",
+        "Thinkpad",
         "tiene",
         "timeago",
         "tipo",
+        "Tobon",
+        "Tuberia",
+        "ubicacion",
+        "umoterminalesgu",
+        "Ûnica",
+        "Uribe",
+        "Urrego",
+        "usuario",
         "usuarios",
-        "Usuarios"
+        "Usuarios",
+        "Usuga",
+        "Valderrama",
+        "verificar",
+        "Villalba",
+        "Viviana",
+        "Vostro",
+        "VTCZ",
+        "WSKT",
+        "Xeon",
+        "XEON",
+        "XVBH",
+        "Yarledy",
+        "ycza",
+        "Yesid",
+        "Yessica",
+        "YKNKW",
+        "YTVCZ",
+        "Yulian",
+        "Yully",
+        "YWBJM",
+        "ZULAY",
+        "Zuleta",
+        "ZXHM"
     ]
 }
