eliminacion de archivos innecesarios, orden, trabajo sobre edit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "Alonso",
         "Alzate",
         "Analista",
+        "apellido",
         "APELLIDOS",
         "aqui",
         "Aquí",
@@ -70,6 +71,7 @@
         "categoria",
         "CBNYJZ",
         "ccosto",
+        "ccostos",
         "CCQJ",
         "cedula",
         "centro",
@@ -355,6 +357,7 @@
         "Serna",
         "Sibaja",
         "Siegert",
+        "signin",
         "Sistemas",
         "SJBK",
         "SMOTOS",
