se agrega boton de busqueda y se descarta barra de busqueda en list.hbs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,8 @@
         "Blandon",
         "BQCR",
         "buscaefz",
+        "buscar",
+        "Buscar",
         "Bustamante",
         "BVQQ",
         "Cadavid",
