campo de busqueda funcionando

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,7 @@
         "Benjumea",
         "Bermudez",
         "Betancur",
+        "bhardware",
         "BHNTVG",
         "Bibiana",
         "Bienestar",
@@ -52,9 +53,12 @@
         "BKZVQ",
         "Blandon",
         "BQCR",
+        "bserial",
         "buscaefz",
         "buscar",
         "Buscar",
+        "busqueda",
+        "búsqueda",
         "Bustamante",
         "BVQQ",
         "Cadavid",
@@ -85,6 +89,7 @@
         "Comercial",
         "Comercio",
         "Compras",
+        "compu",
         "computo",
         "Comunicaciones",
         "Contabilidad",
@@ -145,6 +150,7 @@
         "Escobar",
         "escuela",
         "Escuela",
+        "esta",
         "Estado",
         "Estupiñan",
         "Excelente",
@@ -256,6 +262,7 @@
         "Meneses",
         "Metalmecanica",
         "METROLOGIA",
+        "mierda",
         "MJMWNXL",
         "MJWGCZK",
         "MJXKMXB",
@@ -319,6 +326,7 @@
         "PREXA",
         "Prexxa",
         "procesador",
+        "procesar",
         "proceso",
         "procesos",
         "produccion",
@@ -330,6 +338,7 @@
         "Propio",
         "Provisionamiento",
         "Proyectos",
+        "pserial",
         "puedes",
         "Pulgarin",
         "Pulgarín",
@@ -344,9 +353,11 @@
         "Reposición",
         "resave",
         "Restrepo",
+        "resultados",
         "Revisar",
         "Revisoria",
         "Rojo",
+        "Ruta",
         "Ryzen",
         "Saldarriaga",
         "salud",
