crud funcionando, vistas de hardware estilizadas, pruebas ok

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,11 +81,13 @@
         "CCQJ",
         "cedula",
         "centro",
+        "Cerrar",
         "Chica",
         "Ciro",
         "Clemente",
         "CLRZYZ",
         "CMRZYZ",
+        "Colaboradores",
         "Comercial",
         "Comercio",
         "Compras",
@@ -201,11 +203,13 @@
         "HYBCQJ",
         "Idárraga",
         "Identidad",
+        "Impresoras",
         "Impuestos",
         "Infraestructura",
         "Ingenieria",
         "Ingeniería",
         "Ingeniero",
+        "Iniciar",
         "Inspiron",
         "Inventarios",
         "Investigación",
@@ -241,6 +245,7 @@
         "Logística",
         "Logistico",
         "Logístico",
+        "logoreingaw",
         "Londoño",
         "Lopera",
         "LPMHL",
@@ -268,6 +273,8 @@
         "MJXKMXB",
         "MJXLH",
         "modelo",
+        "modulos",
+        "Modulos",
         "Moncada",
         "Monsalve",
         "Morral",
@@ -310,6 +317,7 @@
         "PEGL",
         "Penagos",
         "Perea",
+        "Perfil",
         "perifericos",
         "Perifericos",
         "periféricos",
@@ -334,6 +342,7 @@
         "producción",
         "productividad",
         "Productividad",
+        "Programacion",
         "propiedad",
         "Propio",
         "Provisionamiento",
@@ -345,6 +354,7 @@
         "Qbex",
         "QRZYZ",
         "Quientero",
+        "Registrarse",
         "Registro",
         "Reinga",
         "reingasession",
@@ -368,9 +378,11 @@
         "Selección",
         "SELLADO",
         "Serna",
+        "Sesion",
         "Sibaja",
         "Siegert",
         "signin",
+        "signup",
         "Sistemas",
         "SJBK",
         "SMOTOS",
