palabras nuevas en el diccionario

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "Analista",
         "apellido",
         "APELLIDOS",
+        "aplicación",
         "aqui",
         "Aquí",
         "Aramburo",
@@ -34,6 +35,7 @@
         "asignados",
         "Asistente",
         "ASUS",
+        "autenticación",
         "Auxiliar",
         "Auxliar",
         "Azul",
@@ -143,6 +145,8 @@
         "Empleados",
         "empresa",
         "emsalbradora",
+        "enrutador",
+        "Enrutador",
         "ensamble",
         "Entrada",
         "equipo",
@@ -156,6 +160,7 @@
         "Estado",
         "Estupiñan",
         "Excelente",
+        "exitosa",
         "fabricante",
         "Facilitador",
         "fcwb",
@@ -167,11 +172,13 @@
         "FNJVT",
         "Formador",
         "FORMAPRESS",
+        "formulario",
         "FQCZ",
         "FQTBY",
         "Fredy",
         "FTZJLM",
         "fullname",
+        "Función",
         "FUXZ",
         "FYGM",
         "Galeano",
@@ -203,6 +210,7 @@
         "HYBCQJ",
         "Idárraga",
         "Identidad",
+        "Importar",
         "Impresoras",
         "Impuestos",
         "Infraestructura",
@@ -210,6 +218,7 @@
         "Ingeniería",
         "Ingeniero",
         "Iniciar",
+        "inicio",
         "Inspiron",
         "Inventarios",
         "Investigación",
@@ -265,6 +274,7 @@
         "Mecánica",
         "Menco",
         "Meneses",
+        "mensaje",
         "Metalmecanica",
         "METROLOGIA",
         "mierda",
@@ -278,6 +288,8 @@
         "Moncada",
         "Monsalve",
         "Morral",
+        "mostrar",
+        "Mostrar",
         "Motocicletas",
         "motos",
         "Motos",
@@ -308,11 +320,15 @@
         "Ospina",
         "Oswaldo",
         "Otalvaro",
+        "otras",
         "otros",
         "Otros",
+        "página",
         "Palacio",
         "Paola",
+        "paquetes",
         "Paredes",
+        "partes",
         "PCGR",
         "PEGL",
         "Penagos",
@@ -354,10 +370,12 @@
         "Qbex",
         "QRZYZ",
         "Quientero",
+        "Redirigir",
         "Registrarse",
         "Registro",
         "Reinga",
         "reingasession",
+        "Renderizar",
         "Rengifo",
         "Reparar",
         "Reposición",
@@ -379,6 +397,7 @@
         "SELLADO",
         "Serna",
         "Sesion",
+        "sesión",
         "Sibaja",
         "Siegert",
         "signin",
