codeado la seccion de agregar personas en el modulo people

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,6 +92,7 @@
         "Colaboradores",
         "Comercial",
         "Comercio",
+        "Completo",
         "Compras",
         "compu",
         "computo",
