adecuacion de la vista modulos con los modulos nuevos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "acta",
         "Activos",
         "actualizado",
+        "administrados",
         "Administrativa",
         "Adrían",
         "Agregar",
@@ -32,6 +33,7 @@
         "Archivo",
         "Aristizabal",
         "Aristizabla",
+        "asignaciones",
         "asignados",
         "Asistente",
         "ASUS",
@@ -214,6 +216,7 @@
         "Importar",
         "Impresoras",
         "Impuestos",
+        "informes",
         "Infraestructura",
         "Ingenieria",
         "Ingeniería",
@@ -295,6 +298,8 @@
         "motos",
         "Motos",
         "movimiento",
+        "movimientos",
+        "Movimientos",
         "MRGDW",
         "MRZYZ",
         "MTALLERMTO",
@@ -433,6 +438,7 @@
         "Teclado",
         "Técnico",
         "Tecnología",
+        "tecnologicos",
         "Tejada",
         "Thinkcentre",
         "Thinkpad",
@@ -440,6 +446,7 @@
         "timeago",
         "tipo",
         "Tobon",
+        "todos",
         "Tuberia",
         "ubicacion",
         "umoterminalesgu",
