inicio de codificacion del modulo perifericos, hecho el modulo de lista y busqueda

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
         "Archivo",
         "Aristizabal",
         "Aristizabla",
+        "ASIGNACION",
         "asignaciones",
         "asignados",
         "Asistente",
@@ -272,6 +273,8 @@
         "Manufactura",
         "Manufatura",
         "maquinas",
+        "marca",
+        "MARCA",
         "Marianella",
         "Marín",
         "Mateo",
