eliminado el campo LIDER de todos los modulos, finalizado el CRUD del modulo perifericos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
         "Bienvenido",
         "BKZVQ",
         "Blandon",
+        "Bolso",
         "BQCR",
         "bserial",
         "buscaefz",
@@ -125,11 +126,13 @@
         "DFNTVG",
         "DGNTVG",
         "DHCKQT",
+        "Diadema",
         "Diademas",
         "Diaz",
         "diceño",
         "Directora",
         "Diseño",
+        "Dispositivo",
         "Disrecoras",
         "DKLSFX",
         "DMWS",
@@ -269,6 +272,7 @@
         "LPZN",
         "LSOFASA",
         "LWSW",
+        "Malo",
         "mantenimiento",
         "Manufactura",
         "Manufatura",
@@ -308,6 +312,7 @@
         "MTALLERMTO",
         "Muñoz",
         "MWJZ",
+        "nada",
         "Narvaez",
         "newreg",
         "nombre",
@@ -334,6 +339,7 @@
         "Otros",
         "página",
         "Palacio",
+        "Pantalla",
         "Paola",
         "paquetes",
         "Paredes",
@@ -343,6 +349,7 @@
         "Penagos",
         "Perea",
         "Perfil",
+        "Periferico",
         "perifericos",
         "Perifericos",
         "periféricos",
