ensayos de dashboard

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,6 +94,8 @@
         "CLRZYZ",
         "CMRZYZ",
         "Colaboradores",
+        "colour",
+        "colours",
         "Comercial",
         "Comercio",
         "Completo",
@@ -211,6 +213,8 @@
         "Henao",
         "herramientas",
         "Hewiett",
+        "highcharts",
+        "Highcharts",
         "HKTCZ",
         "hnbxjjhmj",
         "HNTVG",
@@ -400,6 +404,7 @@
         "resultados",
         "Revisar",
         "Revisoria",
+        "Roboto",
         "Rojo",
         "Ruta",
         "Ryzen",
