--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "express-mysql-session": "^2.1.7",
         "express-session": "^1.17.2",
         "express-validator": "^6.14.0",
+        "highcharts": "^10.3.3",
         "morgan": "^1.10.0",
         "mysql": "^2.18.1",
         "passport": "^0.5.2",
