--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,8 @@
         "Albeiro",
         "Aldemar",
         "Almacen",
+        "Almacenado",
+        "almacenados",
         "almacenamiento",
         "ALMACENGUARNE",
         "Almacenista",
@@ -330,6 +332,9 @@
         "García",
         "Garro",
         "GCQJ",
+        "gequipos",
+        "gequiposalm",
+        "gequiposent",
         "Gerencia",
         "Gerente",
         "Gestion",
