corregidos errores en modulo hw  y en css, quedan configuradas las primeras dos cards en  el dashboard

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -163,6 +163,7 @@
         "cedula",
         "centro",
         "Cerrar",
+        "chartjs",
         "Chica",
         "Ciro",
         "clearfix",
@@ -179,6 +180,7 @@
         "compu",
         "computo",
         "Comunicaciones",
+        "Configurator",
         "Consolas",
         "Contabilidad",
         "Contable",
@@ -192,6 +194,7 @@
         "Costos",
         "cpath",
         "Crear",
+        "creativetimofficial",
         "Cristian",
         "CSCZ",
         "csvg",
@@ -277,6 +280,7 @@
         "Enrutador",
         "ensamble",
         "Entrada",
+        "Entregados",
         "EPAX",
         "EPJL",
         "equipo",
@@ -345,11 +349,15 @@
         "GLRZYZ",
         "gmnoprint",
         "Goez",
+        "gpcalm",
+        "gpcent",
+        "gpcperc",
         "Grajales",
         "grayscale",
         "Guanga",
         "guardado",
         "Guardar",
+        "gucount",
         "gvwb",
         "HDLYWT",
         "Henao",
@@ -511,6 +519,7 @@
         "OAAO",
         "OAAW",
         "Ocampo",
+        "octicon",
         "Operación",
         "Operaciones",
         "Operario",
@@ -616,6 +625,8 @@
         "sesión",
         "sharrre",
         "Sibaja",
+        "sidenav",
+        "Sidenav",
         "Siegert",
         "signin",
         "signup",
