codeado el apartado agregar en el modulo printers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
     "Aramburo",
     "Arango",
     "Araque",
+    "Archivada",
     "Archivo",
     "Aristizabal",
     "Aristizabla",
@@ -185,6 +186,7 @@
     "computo",
     "Comunicaciones",
     "Configurator",
+    "CONIX",
     "Consolas",
     "consulta",
     "Contabilidad",
@@ -299,6 +301,7 @@
     "esta",
     "Estado",
     "Estupiñan",
+    "Etiquetas",
     "EWSQ",
     "Excelente",
     "existentes",
@@ -387,7 +390,9 @@
     "Idárraga",
     "Identidad",
     "iframe",
+    "IMDUCOP",
     "Importar",
+    "Impresora",
     "Impresoras",
     "Impuestos",
     "informes",
@@ -500,6 +505,7 @@
     "MRGDW",
     "MRZYZ",
     "MTALLERMTO",
+    "Multifuncional",
     "Muñoz",
     "MWJZ",
     "nada",
@@ -541,6 +547,7 @@
     "Oswaldo",
     "Otalvaro",
     "otras",
+    "OTRO",
     "otros",
     "Otros",
     "página",
@@ -564,6 +571,8 @@
     "Pino",
     "pinterest",
     "Pintura",
+    "planta",
+    "Planta",
     "Poliuretano",
     "PORTERIA",
     "Practicante",
