mas datos en la tabla de perifeicos y correccion de estructura en dashboard

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -191,7 +191,10 @@
     "consulta",
     "Contabilidad",
     "Contable",
+    "contador",
     "contadora",
+    "contenedora",
+    "Conteo",
     "Coordinador",
     "Coordinadora",
     "corporativos",
@@ -361,6 +364,7 @@
     "Goez",
     "gpcalm",
     "gpcent",
+    "gpcount",
     "gpcperc",
     "Grajales",
     "grayscale",
